--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,37 +1,19 @@
-df# ===========================================
-# 開發環境配置 (Development Environment)
-# ===========================================
-
-# Database
-DATABASE_URL="postgresql://postgres:password@localhost:5432/savote_dev?schema=public"
-
-# JWT Configuration
-JWT_PRIVATE_KEY_PATH="./secrets/jwt-private.key"
-JWT_PUBLIC_KEY_PATH="./secrets/jwt-public.key"
-JWT_ACCESS_TOKEN_EXPIRES_IN="15m"
-JWT_REFRESH_TOKEN_EXPIRES_IN="7d"
-
-# Session Configuration
-SESSION_SECRET="dev-session-secret-key-change-in-production"
-
-# SAML Configuration (IdP: Synology DSM SAML or other IdP)
-# 設為你的 IdP 登入端點（例如 Synology DSM: https://<your-idp>/webman/sso/SSOOauth.cgi）
-SAML_ENTRY_POINT="https://<your-idp-domain>/saml/sso"
-SAML_CALLBACK_URL="http://localhost:3000/auth/saml/callback"
-# 你的 SP Issuer/Entity ID（供 IdP 設定識別用）
-SAML_ISSUER="savote"
-# IdP X.509 憑證（貼上 Base64 內容即可；會自動轉成 PEM）
-SAML_CERT=""
-
-# CORS - 允許前端域名訪問
-CORS_ORIGIN="http://localhost:5173"
-
-# Server Configuration
+# Application
 PORT=3000
 NODE_ENV=development
+CORS_ORIGIN=http://localhost:5173
 
-# Security
-BCRYPT_ROUNDS=10
+# Database
+DATABASE_URL="postgresql://user:password@localhost:5432/savote"
 
-# Logging
-LOG_LEVEL=debug
+# JWT
+JWT_ACCESS_TOKEN_EXPIRES_IN=15m
+JWT_REFRESH_TOKEN_EXPIRES_IN=7d
+JWT_PRIVATE_KEY_PATH=./secrets/jwt-private.key
+JWT_PUBLIC_KEY_PATH=./secrets/jwt-public.key
+
+# OIDC (NCUE)
+OIDC_ISSUER=https://nam.ncue.edu.tw/nidp/oauth/nam
+OIDC_CLIENT_ID=9ce08547e0d2a372eba5bd3013c4a562
+OIDC_CLIENT_SECRET=4EALbHhbsGKtd9xjQbp0Fl0QAbFRgkPN
+OIDC_CALLBACK_URL=http://localhost:3000/auth/callback
