--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,7 +31,6 @@
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/throttler": "^6.4.0",
-    "@node-saml/passport-saml": "^4.0.4",
     "@prisma/client": "^6.2.0",
     "@savote/crypto-lib": "workspace:*",
     "@savote/shared-types": "workspace:*",
@@ -45,6 +44,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "merkletreejs": "^0.4.0",
+    "openid-client": "^5.6.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
