--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@savote/shared-types": "workspace:*",
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "circomlibjs": "0.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
